Changed policies to utils folder
